--- a/css/style.css
+++ b/css/style.css
@@ -20,48 +20,48 @@ a{
     background-color:rgba(0, 0, 0, 0.4);
 }
 #logo{
-    margin-left: 100px;
-    margin-top:10px;
+    margin-top:5px;
     width:150px;
     height: 50px;
     font-family: 'Roboto Slab', serif;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 #logo a img{
     width:50px;
+    margin-right: 10px;
 }
 .tekstMeni :hover{
     color:#e2a600;
 }
-#nav{
-    width: 800px;
-    margin-left:25%;
-    display: flex;
-    align-items: center;
-}
-#nav ul{
-    display:flex;
-    align-items: center;
+#nav ul,#listaHamburger{
     list-style-type: none; 
-   
+    text-align: center;
 }
 #nav ul li{
     margin-left:5%;
-    height:20px;
-    width:100px;
+    display:inline; 
 }
-#nav ul li a{
+#nav ul li a,#hamburgerPodMeni{
     font-family: 'Roboto Slab', serif;
-    font-size:16px;
+    font-size:20px;
 }
 #sredina{
     background-image: url('../img/banner3r.jpg');
     background-size: cover;
     width:100%;
     height: 600px;
+    border-bottom:2px solid #4c9fff ;
 }
+.nevidljiv{
+    display: none;
+}
+#hamburgerPodMeni{
+    font-size: 20px;
+    line-height: 2;
+}
+
 
 
 
