--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,8 @@ a{
     background-size: cover;
     width:100%;
     height: 600px;
-    border-bottom:2px solid #4c9fff ;
+    border-bottom: 2px solid #425efd;
+    /* border-bottom:2px solid #4c9fff ; */
 }
 .nevidljiv{
     display: none;
