--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ a{
     position: fixed;
     background-color:rgba(0, 0, 0, 0.7);
     padding: 0px 40px;
+    z-index: 100;
 }
 #logo{
     margin-top:5px;
