--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ a{
 }
 #baner{
     height: 400px;
-    background-image: url('../img/slikaProjekti5.jpg');
+    background-image: url('../img/slikaPozadina.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
