--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body{
 h1,h2{
     font-family: 'Poppins', sans-serif;
 }
-p,a,h4{
+p,a,h4,form,input{
     font-family: 'Raleway', sans-serif;
 }
 .cistac{
@@ -76,8 +76,6 @@ a{
     background-size: cover;
     width:100%;
     height: 700px;
-    /* border-bottom: 2px solid #425efd; */
-    /* border-bottom:2px solid #4c9fff ; */
 }
 #sredinaNaslov{
     color: #fff;
@@ -103,7 +101,6 @@ a{
 #hamburgerPodMeni a{
     color:#d6a400;
 }
-
 #pokazivac{
     width: 100%;
     display: flex;
@@ -175,6 +172,15 @@ a{
 }
 .kontaktNaslovi{
     text-align: left;
+}
+#forma{
+    margin-top: 50px;
+    font-size: 19px;
+}
+#forma input{
+    width: 100%;
+    margin-top: 15px;
+    font-size: 19px;
 }
 .slikaAutor{
     width: 300px;
