--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ a{
 }
 #forma input{
     width: 100%;
-    margin-top: 15px;
+    margin-top: 20px;
     font-size: 19px;
 }
 .slikaAutor{
@@ -201,6 +201,9 @@ footer{
     h1{
         font-size: 1em;
     }
+    #logo{
+        padding-left: 0px;
+    }
     #sredina{
         height:400px;
     }
@@ -214,6 +217,12 @@ footer{
     }
     #navigacija{
         background-color:rgba(0, 0, 0, 0.6);
+    }
+    .projekti img{
+        width: 180%;
+    }
+    #formaKontakt,#kontaktBlok{
+        padding-left: 10%;
     }
 }
 
